# mcp-agent

./: README.md  main.py  pyproject.toml
src/mcp_agent/: __init__.py  agent.py  client.py  data_models.py  prompts.py  utils.py
